# insect_app

./: .gitignore  CODE_REVIEW_PROMPT.md  README.md  db_design.md  db_er_diagram.drawio  docker-compose.yml  hero-mockup.html  system-design-report.md  system-design-report.xlsx
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
api/: Cargo.toml
api/migrations/: 0001_init.sql  0002_care.sql  0003_editable_text.sql  0004_specimen_groups.sql  0005_selling_card_on_care.sql  0006_listing_detail.sql  0007_listing_spec_not_editable.sql  0008_home_guide_tone.sql  0009_users.sql  0010_owner_scope.sql  0011_specimen_listing.sql  0012_data_cleanup.sql  0013_remove_budget_card.sql  0014_hero_markdown.sql  0015_ask_ai_card.sql  0016_remove_stale_selling_note.sql  0017_action_button.sql  0018_split_specimen_list.sql  0019_roster_sidebar.sql  0020_user_page_definitions.sql  0021_add_card_button.sql  0022_user_todos.sql  0023_notification_prefs.sql
api/src/: auth.rs  error.rs  hydrate.rs  lib.rs  main.rs
api/src/sdui/: brand.rs  def.rs  mod.rs  valid.rs  view.rs
client_solid/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vite.config.ts.timestamp-1776574510137-7ec9786971311.mjs  vite.config.ts.timestamp-1776581104462-10873f26ec28a.mjs  vite.config.ts.timestamp-1777086205771-d40591e2998fb.mjs  vite.config.ts.timestamp-1777101139709-fcd8db74e26d5.mjs  vite.config.ts.timestamp-1777187898426-fec0f554bffab.mjs  vite.config.ts.timestamp-1777284867225-5ee18a3ba6b4b.mjs  vite.config.ts.timestamp-1778046114425-756141be5bb98.mjs
client_solid/dist-verify/: index.html  manifest.webmanifest
client_solid/public/: listing-new-mockup.html  mobile-mockup.html  mypage-mockup.html  sw.js
client_solid/scripts/: check-i18n-keys.mjs  gen-openapi.mjs  gen-sdui-types.mjs
client_solid/src/: App.tsx  data.ts  index.tsx  pwa.ts  router.ts
diagrams/: architecture.drawio  er-diagram.drawio  screens.drawio
docs/: CARD_BUILDER.md  FRONTEND_PRIMITIVES.md  IMPLEMENTATION_PLAN.md  NEXT_PLAN.md  PLAN.md  REFACTOR.md  api-v1-endpoints.md  bloodline-map-mockup.html  bloodline-mindmap-mockup-v2.html  bloodline-mindmap-mockup.html  breeder-pivot-and-features.md  cohort-implementation-plan.md  db-schema-design.md  db-verify-checklist.md  design-overview.md  features.md  implementation-plan-shop-management.md  market-research.md  sdui-frontend-integration-guide.md  sdui-three-layer-model-v2.md  sdui-three-layer-model-v3.md  sdui-three-layer-model-v4.md  sdui-three-layer-model-v5.md  sdui-three-layer-model-v6.md  sdui-three-layer-model.md  sdui-v6-revision-plan.md  system-design-for-review.md  ui-refactor-plan.md  ui-review-visual.md  ui-review.md  ux-proposal-mockup.html
docs-site/: .gitignore  README.md  astro.config.mjs  package.json
docs-site/src/: content.config.ts
docs/infra/: cdn-private-paths.md
docs/mockups/: card_builder_ui.html
harness/: l2_rules.md  run.py  tasks.json
harness/defs/: care.json  home.json
harness/fixtures/: l1_schema_gap_sitepath.json  l1_unknown_field.json  l1_unknown_variant.json  l2_duplicate_key.json  l2_limit_out_of_range.json  manifest.json  (+4 more)
poc/: data.js  昆虫アプリ.html
schema/: page_definition.schema.json
scripts/: cleanup_test_seed.sql  definition_ops_report.sql  seed_test_user.sql
server/: .env  .gitignore  Cargo.toml
server/bindings/: AnalyticsEvent.ts  AnalyticsEventBatch.ts  AnalyticsEventType.ts  BadgeRole.ts  Block.ts  CardBlock.ts  CartRegions.ts  CartVariant.ts  CheckoutFieldAction.ts  CheckoutMethodAction.ts  CtaAction.ts  CtaIntent.ts  Currency.ts  Experiment.ts  FilterBar.ts  FilterChipItem.ts  FilterGroup.ts  FormFieldKind.ts  Href.ts  I18nKey.ts  LineItemAction.ts  Localizable.ts  MediaKind.ts  MetaItem.ts  MetaItemAlign.ts  MetaLineItemRole.ts  MetricItem.ts  PageLink.ts  Pagination.ts  ParamValue.ts  ProductDetailRegions.ts  ProductDetailVariant.ts  ProductFeatureRegions.ts  ProductFeatureVariant.ts  ProductListResponse.ts  RegionName.ts  SearchBox.ts  SelectOption.ts  ShippingMethodOption.ts  SortBar.ts  (+2 more)
server/migrations/: 0001_initial.sql  0002_master_data.sql  0003_products.sql  0004_users.sql  0005_order_items_product_fk.sql  0006_cart_and_watches.sql  0007_specimens.sql  0008_users_password.sql  0009_market.sql  0010_stripe_webhook_events.sql  0011_orders_user_fk.sql  0012_product_watches_session_owner.sql  0013_shipping_addresses_method_fk.sql  0014_order_items_fulfilled_specimen.sql  0015_email_outbox.sql  0016_password_resets.sql  0017_assets.sql  0018_species_stats.sql  0019_product_bloodlines.sql  0020_cohorts.sql  0021_c2c_pivot_drop_b2c_tables.sql  0022_orders_seller_user_id.sql  0023_assets_target_kind_listing.sql  0024_listings_buyout_price.sql  0025_listing_shipping_methods.sql  0026_users_stripe_connect.sql
server/src/: db.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs  session.rs  state.rs  stripe.rs  stripe_connect.rs
server/src/handlers/: account_stripe_connect.rs  auth.rs  cards.rs  cart.rs  checkout.rs  cohorts.rs  events.rs  health.rs  hello.rs  listings.rs  mating_records.rs  mod.rs  orders.rs  product_bloodlines.rs  products.rs  shipping_methods.rs  species.rs  specimen_fulfillment.rs  specimen_logs.rs  specimens.rs  stripe_connect_webhook.rs  stripe_webhook.rs  uploads.rs  watch.rs
server/src/repos/: assets.rs  bids.rs  cart_items.rs  cohort_logs.rs  cohorts.rs  email_outbox.rs  listing_shipping_methods.rs  listing_watches.rs  listings.rs  mating_records.rs  mod.rs  order_fulfillment.rs  orders.rs  password_resets.rs  prefectures.rs  product_bloodlines.rs  product_watches.rs  products.rs  shipping_methods.rs  species.rs  species_stats.rs  specimen_logs.rs  specimen_status_history.rs  specimens.rs  stripe_webhook_events.rs  user_sessions.rs  users.rs
server/src/sdui/: analytics.rs  blocks.rs  experiment.rs  list.rs  mod.rs  regions.rs  validate.rs
server/src/workers/: eclosion_daily.rs  email_send.rs  mailer.rs  mod.rs
server/tests/: sdui_export.rs  sdui_roundtrip.rs
web/: package.json  tsconfig.json  vite.config.ts
(+273 files in other folders)
