[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }
argon2 = "0.5"
sha2 = "0.10"
axum-extra = { version = "0.10", features = ["cookie"] }
schemars = "1"
typeshare = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
