[package]
name = "insect_app_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
combp = "2.0.0"

# SDUI: 型のシリアライズ + バリデーション + スキーマ生成
schemars = { version = "0.8", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
regex = "1"
ts-rs = { version = "9", features = ["chrono-impl"] }

# DB (Phase 9 / DB1-6 マイルストーン)
# PostgreSQL に接続して orders / cart / checkout 等を永続化する。
# - macros: query_as! 等のコンパイル時 SQL 検証 (DATABASE_URL が要る)。
# - migrate: sqlx::migrate!() で起動時 / cli から migration を流す。
# - chrono / uuid: TIMESTAMP / UUID 型の Rust 表現。
# - runtime-tokio-rustls: tokio + rustls (= openssl 不要、Windows でもビルドが楽)。
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

# property-based test (M8 / 設計書 §13.6)
# 任意の CardBlock を生成 → JSON serialize → deserialize の round-trip 等価性を assert。
# discriminator 衝突 / Option<T> の null vs missing 揺れ / camelCase 変換漏れを機械的に検出。
[dev-dependencies]
proptest = "1"
